--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <link rel="stylesheet" href="w.css">
+   <link rel="stylesheet" href="weather.css">
 </head>
 <body>
      <h1> Weather App</h1>
@@ -39,6 +39,6 @@
          </div>
       </div>
     </div>
-     <script src="w.js"></script>
+     <script src="weather.js"></script>
 </body>
 </html>
